# one_thread_gpu_bench

./: .gitignore  Cargo.toml  README.md
shaders/compute_shader/: Cargo.toml
shaders/compute_shader/src/: lib.rs  util.rs
src/: compute.rs  compute_shader.slang  compute_shader.wgsl  compute_shader.wgsl.opt.glsl  compute_shader_rust.glsl  compute_shader_slang.spv  main.rs  timestamp.rs
