[package]
name = "one_thread_gpu_bench"
version = "0.0.0"
edition = "2021"

[dependencies]
# Only here to show bench CPU/GPU time comparison all at the same time
compute_shader = { path = "./shaders/compute_shader" }

futures = { version = "0.3", default-features = false, features = [
    "std",
    "executor",
] }
# Vulkan SDK or MoltenVK needs to be installed for `vulkan-portability` to work on macOS
wgpu = { version = "0.16.0", features = ["spirv", "vulkan-portability"] }
structopt = "0.3"
bytemuck = "1.6.3"

spirv-builder = { version = "0.9", features = ["watch"] }

# for glam
spirv-std = { version = "0.9" }


# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[patch.crates-io]
spirv-builder = { git = "https://github.com/LykenSol/rust-gpu", rev = "d609fce65055ecc0a1109736d56dab2dc3b566ca" }
spirt = { git = "https://github.com/EmbarkStudios/spirt", branch = "vector" }
