[package]
name = "compute_shader"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { version = "0.9" }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rayon = "1.5"

[patch.crates-io]
spirv-builder = { git = "https://github.com/LykenSol/rust-gpu", rev = "d609fce65055ecc0a1109736d56dab2dc3b566ca" }
spirt = { git = "https://github.com/EmbarkStudios/spirt", branch = "vector" }
